--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
       <!--<ion-img src="/assets/shapes.svg"></ion-img>-->
       <ion-card-header>
           <ion-button style="float:right;" size="small" (click)="logout()">Logout</ion-button>
-        <ion-card-subtitle>C'est parti</ion-card-subtitle>
+        <ion-card-subtitle>Let's go</ion-card-subtitle>
         <ion-card-title>Welcome !</ion-card-title>
         <div class="center" *ngIf="isUserLoggedIn()">
           <ion-text> {{fullname()}} </ion-text>
