--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,17 +3,17 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Accueil</ion-label>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="ios-list"></ion-icon>
-      <ion-label>Liste</ion-label>
+      <ion-label>List</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Autre</ion-label>
+      <ion-label>Other</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
